@@ -77,7 +77,7 @@ struct ErrorString ErrorMessages[] = {
 	{UPNP_E_INVALID_PARAM, "UPNP_E_INVALID_PARAM"},
 	{UPNP_E_OUTOF_HANDLE, "UPNP_E_OUTOF_HANDLE"},
 	{UPNP_E_OUTOF_CONTEXT, "UPNP_E_OUTOF_CONTEXT"},
-	{UPNP_E_OUTOF_MEMORY, "UPNP_E_OUTOF_MEMOR"},
+	{UPNP_E_OUTOF_MEMORY, "UPNP_E_OUTOF_MEMORY"},
 	{UPNP_E_INIT, "UPNP_E_INIT"},
 	{UPNP_E_BUFFER_TOO_SMALL, "UPNP_E_BUFFER_TOO_SMALL"},
 	{UPNP_E_INVALID_DESC, "UPNP_E_INVALID_DESC"},
@@ -90,7 +90,10 @@ struct ErrorString ErrorMessages[] = {
 	{UPNP_E_INVALID_ACTION, "UPNP_E_INVALID_ACTION"},
 	{UPNP_E_FINISH, "UPNP_E_FINISH"},
 	{UPNP_E_INIT_FAILED, "UPNP_E_INIT_FAILED"},
+	{UPNP_E_URL_TOO_BIG, "UPNP_E_URL_TOO_BIG"},
 	{UPNP_E_BAD_HTTPMSG, "UPNP_E_BAD_HTTPMSG"},
+	{UPNP_E_ALREADY_REGISTERED, "UPNP_E_ALREADY_REGISTERED"},
+	{UPNP_E_INVALID_INTERFACE, "UPNP_E_INVALID_INTERFACE"},
 	{UPNP_E_NETWORK_ERROR, "UPNP_E_NETWORK_ERROR"},
 	{UPNP_E_SOCKET_WRITE, "UPNP_E_SOCKET_WRITE"},
 	{UPNP_E_SOCKET_READ, "UPNP_E_SOCKET_READ"},
@@ -98,13 +101,22 @@ struct ErrorString ErrorMessages[] = {
 	{UPNP_E_SOCKET_CONNECT, "UPNP_E_SOCKET_CONNECT"},
 	{UPNP_E_OUTOF_SOCKET, "UPNP_E_OUTOF_SOCKET"},
 	{UPNP_E_LISTEN, "UPNP_E_LISTEN"},
+	{UPNP_E_TIMEDOUT, "UPNP_E_TIMEDOUT"},
+	{UPNP_E_SOCKET_ERROR, "UPNP_E_SOCKET_ERROR"},
+	{UPNP_E_FILE_WRITE_ERROR, "UPNP_E_FILE_WRITE_ERROR"},
+	{UPNP_E_CANCELED, "UPNP_E_CANCELED"},
 	{UPNP_E_EVENT_PROTOCOL, "UPNP_E_EVENT_PROTOCOL"},
 	{UPNP_E_SUBSCRIBE_UNACCEPTED, "UPNP_E_SUBSCRIBE_UNACCEPTED"},
 	{UPNP_E_UNSUBSCRIBE_UNACCEPTED, "UPNP_E_UNSUBSCRIBE_UNACCEPTED"},
 	{UPNP_E_NOTIFY_UNACCEPTED, "UPNP_E_NOTIFY_UNACCEPTED"},
-	{UPNP_E_INTERNAL_ERROR, "UPNP_E_INTERNAL_ERROR"},
 	{UPNP_E_INVALID_ARGUMENT, "UPNP_E_INVALID_ARGUMENT"},
+	{UPNP_E_FILE_NOT_FOUND, "UPNP_E_FILE_NOT_FOUND"},
+	{UPNP_E_FILE_READ_ERROR, "UPNP_E_FILE_READ_ERROR"},
+	{UPNP_E_EXT_NOT_XML, "UPNP_E_EXT_NOT_XML"},
+	{UPNP_E_NO_WEB_SERVER, "UPNP_E_NO_WEB_SERVER"},
 	{UPNP_E_OUTOF_BOUNDS, "UPNP_E_OUTOF_BOUNDS"},
+	{UPNP_E_NOT_FOUND, "UPNP_E_NOT_FOUND"},
+	{UPNP_E_INTERNAL_ERROR, "UPNP_E_INTERNAL_ERROR"},
 };
 
 
